--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
             <thead>
                 <tr>
                     <th colspan="6">Timetable</th>
-                </tr></thead>
-                <tbody>
+                </tr>
+            </thead>
+            <tbody>
                 <tr>
-                    <td rowspan="7"><h1>hours</h1></td>
+                    <td rowspan="7"><h1>Hours</h1></td>
                     <th>Mon</th>
                     <th>Tue</th>
                     <th>Wed</th>
@@ -23,35 +24,34 @@
                     <th>Fri</th>
                 </tr>
                 <tr>
-                    
-                    <td>Science</td>
-                    <td>Maths</td>
-                    <td>Science</td>
-                    <td>Maths</td>
-                    <td>Arts</td>
+                    <td><a href="teacher_science.html">Science</a></td>
+                    <td><a href="teacher_maths.html">Maths</a></td>
+                    <td><a href="teacher_science.html">Science</a></td>
+                    <td><a href="teacher_maths.html">Maths</a></td>
+                    <td><a href="teacher_arts.html">Arts</a></td>
                 </tr>
                 <tr>
-                    <td>Social</td>
-                    <td>Hindi</td>
-                    <td>English</td>
-                    <td>Social</td>
-                    <td>Sports</td>
+                    <td><a href="teacher_social.html">Social</a></td>
+                    <td><a href="teacher_hindi.html">Hindi</a></td>
+                    <td><a href="teacher_english.html">English</a></td>
+                    <td><a href="teacher_social.html">Social</a></td>
+                    <td><a href="teacher_sports.html">Sports</a></td>
                 </tr>
                 <tr>
                     <td colspan="6" class="lunch">Lunch Break</td>
                 </tr>
                 <tr>
-                    <td>Science</td>
-                    <td>Maths</td>
-                    <td>Science</td>
-                    <td>Maths</td>
-                    <td rowspan="2">Project</td>
+                    <td><a href="teacher_science.html">Science</a></td>
+                    <td><a href="teacher_maths.html">Maths</a></td>
+                    <td><a href="teacher_science.html">Science</a></td>
+                    <td><a href="teacher_maths.html">Maths</a></td>
+                    <td rowspan="2"><a href="teacher_project.html">Project</a></td>
                 </tr>
                 <tr>
-                    <td>Social</td>
-                    <td>Hindi</td>
-                    <td>English</td>
-                    <td>Social</td>
+                    <td><a href="teacher_social.html">Social</a></td>
+                    <td><a href="teacher_hindi.html">Hindi</a></td>
+                    <td><a href="teacher_english.html">English</a></td>
+                    <td><a href="teacher_social.html">Social</a></td>
                 </tr>
             </tbody>
         </table>
