--- a/teacher_science.html
+++ b/teacher_science.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Science Teacher: Mr. Sankalp Agarwal</h1>
-        <p>Email: sankalp8080.com</p>
-        <p>Phone: 0123456789</p>
+        <h1>Science Teacher: Mr. John Doe</h1>
+        <p>Email: john.doe@example.com</p>
+        <p>Phone: 123-456-7890</p>
         <p>Office Hours: Mon-Fri, 10 AM - 12 PM</p>
     </div>
 </body>
